--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <main class="bg-slate-900 md:bg-slate-600 lg:bg-slate-300 transition-all">
-  <router-outlet></router-outlet>
+  <form [formGroup]="form">
+    <router-outlet></router-outlet>
+  </form>
 </main>
