--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<main class="bg-slate-900 md:bg-slate-600 lg:bg-slate-300 transition-all">
-  <form [formGroup]="form">
+<main class="min-h-screen flex items-center transition-all">
+  <form class="w-full" [formGroup]="form">
     <router-outlet></router-outlet>
   </form>
 </main>
