--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,4 +1,4 @@
-<form
+<div
   [formGroup]="profile"
   class="page-elements-gapped"
 >
@@ -34,4 +34,4 @@
     Go Next
     <img class="-rotate-90" width="32px" src='./assets/arrow-down--48.svg' alt='' role="presentation"/>
   </button>
-</form>
+</div>
