--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -6,7 +6,7 @@
   <ng-container formArrayName="projects" *ngFor="let group of projects.controls, let i = index">
     <div [formGroupName]="i" class="flex flex-col gap-2">
       <label class="input-label">
-        Project
+        Project {{ i + 1 }}
         <input
           class="input w-1/2"
           type="text"
