--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -6,7 +6,7 @@
   <label class="input-label">
     Name w/ formControlName
     <input
-      class="input w-1/2"
+      class="input input-success w-1/2 transition-all"
       type="text"
       formControlName="name"
     />
@@ -15,7 +15,7 @@
   <label class="input-label">
     Name w/ formControl
     <input
-      class="input w-1/2"
+      class="input input-success w-1/2 transition-all"
       type="text"
       [formControl]="name"
     />
@@ -24,13 +24,13 @@
   <label class="input-label">
     Quote
     <input
-      class="input w-1/2"
+      class="input input-success w-1/2 transition-all"
       type="text"
       formControlName="quote"
     />
   </label>
 
-  <button class="input flex justify-end items-center" (click)="next()">
+  <button class="input input-success flex justify-end items-center transition-all" (click)="next()">
     Go Next
     <img class="-rotate-90" width="32px" src='./assets/arrow-down--48.svg' alt='' role="presentation"/>
   </button>
