--- a/src/app/components/review/review.component.html
+++ b/src/app/components/review/review.component.html
@@ -2,7 +2,26 @@
   [formGroup]="form"
   class="page-elements-gapped"
 >
-  <h1 class="text-xl">Projects in Progress</h1>
+  <h1 class="text-xl">Review</h1>
+  <div formGroupName="profile" class="flex flex-col gap-2">
+    <label class="input-label">
+      Name
+      <input
+        class="input input-success w-1/2 transition-all"
+        type="text"
+        formControlName="name"
+      />
+    </label>
+  
+    <label class="input-label">
+      Quote
+      <input
+        class="input input-success w-1/2 transition-all"
+        type="text"
+        formControlName="quote"
+      />
+    </label>
+  </div>
   <ng-container formArrayName="projects" *ngFor="let group of projects.controls, let i = index">
     <div [formGroupName]="i" class="flex flex-col gap-2">
       <label class="input-label">
@@ -24,7 +43,7 @@
     </div>
   </ng-container>
   <button class="input input-success flex justify-end items-center transition-all" (click)="next()">
-    Go Next
+    Done
     <img class="-rotate-90" width="32px" src='./assets/arrow-down--48.svg' alt='' role="presentation"/>
   </button>
 </div>
