fix: shorten css class

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="page-elements-gapped">
+<div class="page-elements">
   <h1 class="text-xl">Projects in Progress</h1>
   <ng-container *ngFor="let group of projects.controls, let i = index">
     <app-project [project]="group" [index]="i"></app-project>
