--- a/src/app/components/review/review.component.html
+++ b/src/app/components/review/review.component.html
@@ -1,6 +1,6 @@
 <div
   [formGroup]="form"
-  class="page-elements-gapped"
+  class="page-elements"
 >
   <h1 class="text-xl">Review</h1>
   <div formGroupName="profile" class="flex flex-col gap-2">
