--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@
   @apply flex justify-between text-sm;
 }
 
-.page-elements-gapped {
+.page-elements {
   @apply p-4 mx-auto w-11/12 md:w-1/2 flex flex-col gap-2;
 }
 
