--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="page-elements-gapped">
+<div class="page-elements">
   <h1 class="text-xl">Profile</h1>
 
   <label class="input-label">
