that is not BEM

--- a/src/app/components/nono/nono.component.html
+++ b/src/app/components/nono/nono.component.html
@@ -1,7 +1,7 @@
 <form class="page-elements" [formGroup]="child">
   <h1 class="text-xl">Noooo</h1>
 
-  <label class="input-label">
+  <label class="input-label input-label__appended__document__package--declined">
     Appended Control
     <input
       class="input input-success w-1/2 transition-all"
